fix: extra .git

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /tools/local-dev-cluster/
 /projects/web3auth-service/
 /projects/sveltekit-web3auth/
-/projects/example-hasura.git/
-/projects/example-readmodel.git/
+/projects/example-hasura/
+/projects/example-readmodel/
