feat: example policy service

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /projects/web3auth-service/
 /templates/sveltekit-web3auth-template/
 /tools/local-dev-cluster/
+/projects/example-policy-service/
