--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
+/apps/agenda-service/
+/apps/environment/
+/apps/example-dlq-service/
+/apps/example-hasura-projections-service/
+/apps/example-hasura/
+/apps/example-policy-service/
+/apps/example-readmodel-db/
+/apps/example-todo-model/
+/apps/sourced-db/
+/apps/sveltekit-web3auth-template/
+/apps/web3auth-db/
+/apps/web3auth-service/
 /environments/cluster-tooling/
 /environments/local/
 /environments/previews/
 /environments/production/
 /gitops/example-gitops-local/
 /gitops/example-gitops/
-/projects/agenda-service/
-/projects/environment/
-/projects/example-dlq-service/
-/projects/example-hasura-projections-service/
-/projects/example-hasura/
-/projects/example-policy-service/
-/projects/example-readmodel-db/
-/projects/example-todo-model/
-/projects/sourced-db/
-/projects/sveltekit-web3auth/
-/projects/web3auth-db/
-/projects/web3auth-service/
-/templates/sveltekit-web3auth-template/
+/libraries/sveltekit-web3auth/
 /tools/local-dev-cluster/
